[Aditya] - Added afew Swagger Functionalities
